def: DBMSResources: removing call to deprecated "Class.newInstance()"